<resources>
    <string name="app_name">Recipe app</string>
    <string name="todo_title">Recipe title</string>
    <string name="todo_title_hint">recipe title</string>
    <string name="todo_title_label">Recipe Title</string>
    <string name="todo_detail_label">Recipe detail</string>
    <string name="todo_detail">Recipe detail</string>
    <string name="todo_complete_label">is it complete</string>
    <string name="todo_date">Recipe date</string>
    <string name="todo_delete">Delete Recipe</string>
    <string name="todo_edit">Edit Recipe</string>
    <string name="todo_save">Save Recipe</string>
    <string name="todo_list">Recipe List</string>
    <string name="todo_statistics">Statistics</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="clear_completed">Clear</string>
    <string name="check_all">Check All</string>
    <string name="delete_message">This action will delete all Recipes!</string>
    <string name="dialog_title">Warning</string>
    <string name="dialog_warning">There are no Recipes to delete</string>
    <string name="proceed">Proceed</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
</resources>
