<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/todo_title"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:text="@string/todo_title"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/todo_detail"
        android:layout_width="321dp"
        android:layout_height="336dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/todo_detail"
        android:textColor="#696969"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/todo_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todo_title"
        app:layout_constraintVertical_bias="0.0" />

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/todo_date"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/todo_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/editTodo"
            android:layout_width="72dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@android:drawable/ic_menu_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </android.support.constraint.ConstraintLayout>

